tests/mypy/mypy_wrap_function_wrapper_t5.out
tests/mypy/mypy_wrap_function_wrapper_t5.py:23: error: Need type annotation for "wrapped_function"  [var-annotated]
tests/mypy/mypy_wrap_function_wrapper_t5.py:23: error: Argument 3 to "wrap_function_wrapper" has incompatible type "Callable[[str, Any, tuple[Any, ...], dict[str, Any]], Any]"; expected "Callable[[Callable[[VarArg(Never), KwArg(Never)], Never], Any, tuple[Any, ...], dict[str, Any]], Never] | Callable[[Any, Callable[[VarArg(Never), KwArg(Never)], Never], Any, tuple[Any, ...], dict[str, Any]], Never] | Callable[[type[Any], Callable[[VarArg(Never), KwArg(Never)], Never], Any, tuple[Any, ...], dict[str, Any]], Never]"  [arg-type]
Found 2 errors in 1 file (checked 1 source file)
